overflow fixed + new header style and name

--- a/src/_variables_overrides.scss
+++ b/src/_variables_overrides.scss
@@ -1,5 +1,5 @@
 $primary: #4e55d9;
-$success: #31335a;
+$success: rgb(44 45 54);
 $light: #f4f8f8;
 
 $headings-color: #130f4a;
